--- a/.env
+++ b/.env
@@ -1,7 +1,27 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Created by Vercel CLI
+NX_DAEMON=""
+POSTGRES_DATABASE="verceldb"
+POSTGRES_HOST="ep-small-pine-02185599-pooler.us-east-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="gWOwBVfKU46z"
+POSTGRES_PRISMA_URL="postgres://default:gWOwBVfKU46z@ep-small-pine-02185599-pooler.us-east-1.postgres.vercel-storage.com/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL="postgres://default:gWOwBVfKU46z@ep-small-pine-02185599-pooler.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:gWOwBVfKU46z@ep-small-pine-02185599.us-east-1.postgres.vercel-storage.com/verceldb"
+POSTGRES_USER="default"
+SPOTIFY_CLIENT_ID="9d829f14d67444d487e9241b894ab253"
+SPOTIFY_CLIENT_SECRET="9b1a860e8956461db9818f02731e5a42"
+TURBO_REMOTE_ONLY=""
+TURBO_RUN_SUMMARY=""
+VERCEL="1"
+VERCEL_ENV="development"
+VERCEL_GIT_COMMIT_AUTHOR_LOGIN=""
+VERCEL_GIT_COMMIT_AUTHOR_NAME=""
+VERCEL_GIT_COMMIT_MESSAGE=""
+VERCEL_GIT_COMMIT_REF=""
+VERCEL_GIT_COMMIT_SHA=""
+VERCEL_GIT_PREVIOUS_SHA=""
+VERCEL_GIT_PROVIDER=""
+VERCEL_GIT_PULL_REQUEST_ID=""
+VERCEL_GIT_REPO_ID=""
+VERCEL_GIT_REPO_OWNER=""
+VERCEL_GIT_REPO_SLUG=""
+VERCEL_URL=""
