--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "db:push": "prisma db push",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
+    "lint": "next lint",
     "start": "next start",
-    "lint": "next lint"
+    "generate": "prisma generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
